alteracao no layout e adicao de instrucoes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <script src="https://kit.fontawesome.com/1c9daaecdd.js" crossorigin="anonymous"></script>
+
     <title>JOGO DA COBRINHA</title>
 </head>
 <body>
+    <h1><i class="fas fa-gamepad"></i> SNAKE GAME <i class="fas fa-gamepad"></i></h1>
+    <div class="comandos">
+        <p>Utilize as setas do teclado para controlar a cobrinha! <i class="fas fa-arrow-up"></i>
+            <i class="fas fa-arrow-right"></i>
+            <i class="fas fa-arrow-left"></i>
+            <i class="fas fa-arrow-down"></i></p>  
+        <p>Recarregue a página para recomeçar o jogo! <i class="fas fa-redo"></i></p>
+    </div>
     <canvas id="snake" width="512px" height="512px"></canvas>
- 
     
 </body>
 </html>
